tests/baselines/reference/es5-commonjs7(strict=true).errors.txt
test.d.ts(2,12): error TS7005: Variable '__esModule' implicitly has an 'any' type.


==== test.d.ts (1 errors) ====
    export default undefined;
    export var __esModule;
               ~~~~~~~~~~
!!! error TS7005: Variable '__esModule' implicitly has an 'any' type.
    